# crewai_api_local

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_five_tools.py  create_prompts.sh  docker-compose.yml  install-script.sh  pyproject.toml  test_models_config.yaml
api/: main.py
api/dependencies/: db.py
api/routers/: agents.py  crews.py  tasks.py  tools.py
config/: settings.py
crew/agents/: base_agent.py  classification_agent.py  file_watcher.py
crew/clients/: ollama_llm_client.py  prompt_loader.py
crew/crews/: base_crew.py
crew/prompts/code_analysis/: standard.yml
crew/prompts/content_repurposing/: standard.yml
crew/prompts/entity_extraction/: standard.yml
crew/prompts/keyword_extraction/: domain.yml  marketing.yml  standard.yml  technical.yml
crew/prompts/process_extraction/: standard.yml
crew/prompts/section_analyzer/: standard.yml
crew/prompts/summary_generation/: executive.yml  technical.yml
crew/prompts/theme_extraction/: business.yml  marketing.yml  standard.yml  technical.yml
crew/tasks/: base_task.py  classification_task.py
crew/tools/: LLM_code_analysis_tool.py  LLM_content_repurposing_tool.py  LLM_entity_extraction_tool.py  LLM_keyword_extractor_tool.py  LLM_primary_theme_extractor_tool.py  LLM_process_extractor_tool.py  LLM_section_analyzer_tool.py  LLM_summary_generation_tool.py  base_tool.py
tests/: conftest.py
tests/crew/: run_tests.py  test_extraction_tools.py  test_llm_client.py  test_prompt_loader.py  test_tools.py
