[tool.poetry]
name = "crewai-local"
version = "0.1.0"
description = "CrewAI-Local with Supabase integration"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api" },
    { include = "crew" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
supabase = "^2.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
crewai = "^0.28.0"  # Make sure to use the latest version

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
